--- a/style/styles.css
+++ b/style/styles.css
@@ -198,3 +198,52 @@ p.service-text {
   font-weight: 600;
   line-height: 35px;
 }
+/* Offer styles */
+#offer-container {
+  background: rgba(229, 84, 115, 0.05);
+  padding: 100px;
+}
+.offer-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 140px;
+  padding: 0 110px;
+}
+.offer-content {
+  display: flex;
+  justify-content: center;
+  padding: 0 110px;
+  align-items: center;
+}
+
+.offer-text h2 {
+  font-size: 40px;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.offer-text h2 span {
+  color: #e55473;
+  font-size: 40px;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.offer-text p {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+  margin-bottom: 32px;
+}
+
+.offer-text {
+  text-align: center;
+  width: 594px;
+}
+
+.offer-img img {
+  width: 318px;
+  height: 420px;
+}
