--- a/style/styles.css
+++ b/style/styles.css
@@ -51,7 +51,9 @@ h6 {
   max-width: 1440px;
   margin: 0 auto;
 }
-
+.text-center {
+  text-align: center;
+}
 .section-padding {
   padding: 120px 0;
 }
@@ -307,3 +309,36 @@ p.service-text {
   gap: 16px;
 }
 /* Footer styles */
+footer {
+  background: #111010;
+  color: #ffffff;
+  height: 449px;
+}
+.footer-content {
+  width: 625px;
+  margin: 0 auto;
+}
+h2.footer-title span {
+  color: #e55473;
+}
+
+h2.footer-title {
+  font-size: 48px;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.footer-content p {
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 32px;
+}
+
+p.copyright {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+}
